package Representation;

import javafx.scene.Group;

public interface Observer{

    public abstract void actualiser();
}

