@startuml
'https://plantuml.com/sequence-diagram

abstract Instance{
    - x
    - y
    +Instance(Class c)
    +getMethode() : List<Composante>
    +getAttribut() : List<Composante>
    +ajouterAttribut(Attribut a) : void
    +ajouterMethode(Methode m) : void
    +getX(): int
    +getY(): int
    +ToVue():Observer
    +toString() : abstract String
}
class Loader{
LoadFromFile(File file):class
}
class Classe{
    +Classe(Class c)
    +toString(): String
}

class Interface{
    +Interface(Class c)
    +toString(): String
}

abstract Composante{
    -type : String
    +Composante(String nom, String Type)
    +getType() : String

}

class Methode{
    +Methode()
}

class Attribut{
    +Attribut()
}

class Import{
    -nom : String
    +getNom() : String
}

class Modele{
    -repertoire : File
    +Modele(String source)
    -creationInstance() : void
    -creationRelation(Class c) : void
    +ajouterInstance(Instance i) : void
    +ajouterrelation() : void
    +getInstance(String name) : Instance
    +toString() : String
}

interface Relation{
    -classeSrc : String
    -classeCible : String
    -Line : chemin
    -Line : pointeA
    -Line : pointeB
    +toString() : String
    +update() : void
}

class Heritage{
    -Line : pointeC
    +Heritage()
    +toString() : String
}

class Implementation{
    -Line : pointeC
    +Implementation()
    +toString() : String
}

class Association {
    -nbSrc : String
    -nbCible : String
    -text : textD
    -text : textF
    +Association()
    +toString() : String
}

abstract globale{
    -nom : String
    -modifier : int
    +getNom() : String
    +getAcces() : String
    +getModifier() : int
}

interface Observer{
    +actualiser()
}

Modele "1" ---> "0..*" Observer : -observer
Instance--|>globale
Composante--|>globale
Modele "1" -> "*" Instance  : -classeInit
Instance "1" -> "*" Composante : -attribut
Instance "1" -> "*" Composante : -Methode
Instance "1" --> "*" Import : -import
Classe --|> Instance
Interface --|> Instance
Methode --|> Composante
Attribut --|> Composante
Modele "1" ----> "*"  Relation : -Relation
Association ..|> Relation
Heritage ..|> Relation
Implementation ..|> Relation
@enduml